Fixing select z-index issue

--- a/packages/nindo/src/external/components/select/select.scss
+++ b/packages/nindo/src/external/components/select/select.scss
@@ -13,6 +13,7 @@
 		font-size: 14px;
 		font-family: $secondaryFont;
 		color: $black-40;
+		z-index: 2;
 	}
 
 	.ninja-select__option--is-disabled {
